trying to fix github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jsd-0423.github.io/Ayman-Maani-Project1/",
+  "homepage": "http://jsd-0423.github.io/Ayman-Maani-Project1",
   "name": "first-project",
   "version": "0.1.0",
   "private": true,
